src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --font-eb-garamond: 'EB Garamond', serif;
  --font-jetbrains-mono: 'JetBrains Mono', monospace;
}

body {
  @apply bg-theme-alabaster text-theme-charcoal antialiased transition-colors duration-500;
}



/* Design Tokens */
@layer base {
  .text-balance {
    text-wrap: balance;
  }
}

/* Custom Scrollbar */
::-webkit-scrollbar {
  width: 6px;
}

::-webkit-scrollbar-track {
  @apply bg-transparent;
}

::-webkit-scrollbar-thumb {
  @apply bg-theme-charcoal/20 rounded-full hover:bg-theme-charcoal/40 transition-colors;
}

